<resources>
    <string name="app_name">Technource</string>
    <string name="select_language_hint">Select Language</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="russian">Russian</string>
    <string name="english_code">en</string>
    <string name="french_code">fr</string>
    <string name="russian_code">ru</string>
    <string name="please_select_language">Please select language</string>
    <string name="intro_next">Next</string>
    <string name="intro_skip">Skip</string>
    <string name="title_text_1">Title 1</string>
    <string name="title_text_2">Title 2</string>
    <string name="title_text_3">Title 3</string>
    <string name="description_text_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eleifend tincidunt rhoncus.</string>
    <string name="description_text_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eleifend tincidunt rhoncus.</string>
    <string name="description_text_3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eleifend tincidunt rhoncus.</string>
    <string name="login_button_text">Login</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="valid_email">Please enter valid email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_valid_password">Password must contain 1 upper case letter 1 lower case letter and 1 special character.</string>
    <string name="empty_firstname">Please enter first name</string>
    <string name="empty_lastname">Please enter last name</string>
    <string name="empty_username">Please enter username</string>
    <string name="empty_mobile">Please enter mobile number</string>
    <string name="empty_new_password">Please enter new password</string>
    <string name="empty_confirm_password">Please enter confirm password</string>
    <string name="password_not_match">Password &amp; Confirm password must be same</string>
    <string name="accept_privacy_policy_error_text">Please accept the terms</string>
    <string name="empty_home_address">Please enter home address</string>
    <string name="empty_office_address">Please enter office address</string>
    <string name="welcome_to_technource">Welcome to Technource</string>
    <string name="create_new_account">Create new account</string>
    <string name="profile_name_hint">First Name</string>
    <string name="profile_lastname_hint">Last name</string>
    <string name="profile_email_hint">E-mail Id</string>
    <string name="profile_username_hint">Username</string>
    <string name="profile_countrycode_hint">+32</string>
    <string name="profile_phone_hint">Mobile Number</string>
    <string name="profile_address_hint">Enter Home Address</string>
    <string name="profile_office_address_hint">Enter Office Address</string>
    <string name="terms_and_conditions"><u>Terms &amp; Conditions</u></string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="by_signing_up_you">By Signing up, you agree with our</string>
    <string name="and">and</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in"><u>Log in</u></string>
    <string name="select_country_code">Select Country Code</string>
    <string name="search">Search</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="glad_to_see_you">Glad to see you, Again!</string>
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="dont_have_an_account">Don’t have an account? </string>
    <string name="sign_up_text"><u>Sign Up</u></string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_para">Enter the email associated with your account and we’ll send an email with instrucation to reset your password</string>
    <string name="forgot_password_button">Send</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_have_sent_you_an_account">We have sent you an account verification code on your entered email. Please enter the code to verify your account.</string>
    <string name="enter_the_code">Enter the code</string>
    <string name="enter_6_digits_otp">Please enter 6 digit code</string>
    <string name="code_has_been_send_to_your">* Code has been send to your registered email.</string>
    <string name="verify">Verify</string>
    <string name="dont_receive_the_otp">Don’t receive the otp? </string>
    <string name="resend_otp"><u>RESEND OTP</u></string>
    <string name="set_new_password">Set New Password</string>
    <string name="set_new_password_message">Here you can add your new password</string>
    <string name="reset_password">Reset Password</string>
    <string name="home">Home</string>
    <string name="order">Order</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="search_here">Search Here</string>
    <string name="git_repo">Github Repo</string>
    <string name="more">More</string>
    <string name="change_language">Change Language</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="home_address">Home Address</string>
    <string name="office_address">Office Address</string>
    <string name="save">Save</string>
    <string name="profile_update">Profile Updated</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="invalid_login_details">Invalid Password! Please enter a valid password</string>
    <string name="email_exists_message">Email ID already exists please try another.</string>
    <string name="registration_success_message">You are successfully register.</string>
    <string name="email_not_register">Email id is not registered! Please create an account first, and then login.</string>
    <string name="delete_message">Are you sure you want to delete this account?</string>
    <string name="delete">Delete</string>
    <string name="delete_success">Your account is successfully delete!</string>
    <string name="about_us">About us</string>
    <string-array name="language">
        <item>English</item>
        <item>French</item>
        <item>Russian</item>
    </string-array>
</resources>