<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.technource.android.ui.loginModule.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/kcPrimaryColor"
        android:orientation="vertical"
        tools:context="com.technource.android.ui.loginModule.LoginActivity">

        <include
            android:id="@+id/backBtn"
            layout="@layout/header_partner" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/kcPrimaryColor"
            android:padding="@dimen/dp_20"
            tools:context=".ui.loginModule.LoginActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/headerWelcomeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_back"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_32"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/headerDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/glad_to_see_you"
                    android:textColor="@color/kcCaptionLightGray"
                    android:textSize="@dimen/sp_18"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/headerWelcomeText" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_30"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:errorIconDrawable="@null"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/headerDesc">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailET"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_60"
                        android:background="@drawable/edit_text_view_bg"
                        android:hint="@string/email_or_username"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/dp_10" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:errorIconDrawable="@null"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailTextInput"
                    app:passwordToggleDrawable="@drawable/show_hide_password_selector"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordET"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_60"
                        android:background="@drawable/edit_text_view_bg"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="@dimen/dp_10" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/forgotPassword"
                    style="@style/yellowText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="end"
                    android:text="@string/forgot_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordTextInput" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login"
                    style="@style/yellowBtnStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_60"
                    android:layout_marginTop="@dimen/dp_30"
                    android:onClick="@{() -> viewModel.onLoginClicked()}"
                    android:text="@string/login_button_text"
                    app:layout_constraintTop_toBottomOf="@id/forgotPassword" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/dontHaveAccountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:text="@string/dont_have_an_account"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintEnd_toStartOf="@+id/signUpTV"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/signUpTV"
                    style="@style/yellowText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:text="@string/sign_up_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/dontHaveAccountText"
                    app:layout_constraintTop_toBottomOf="@+id/login" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_40"
                    android:src="@drawable/img_app_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dontHaveAccountText" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
</layout>